* Fixed erroneous "blocked line of fire" warnings.
* Fixed missing items in Tiles inventory menus.
* Fixed 'C' closing one out of several adjacent doors without prompting.
* Fixed Xom's repel stairs effect moving shops.
* Fixed Xom gifts not being destroyed in deep water.
* Fixed magic mapping bugs in the Tiles version.
* Fixed AltGr not being recognized in Windows Tiles version.
* Fixed misbehaviour for temporary weapon brands and throwing.
* Fixed Blade Hands not counting as slicing while wearing melded gloves.
* Fixed berserking allies taking orders from 'ta'.
* Fixed random blinking sometimes placing the player in dangerous clouds.
* Fixed certain incorporeal monsters flying instead of levitating.
* Staff of earth damage is reduced by AC.
* Lowered damage output for elemental staves.
* Once entered, the gate to Zot remains open even without carrying runes.
* Add some fancy messaging when opening the gate to Zot.
* Prompt before moving when confused and next to lava or deep water.
* Check some abilities' requirements before rolling the success check.
* Consider armour properties in fatal stat loss check before transforming.
* Really allow uniques to retain their spells when polymorphed.
* Improve Yredelemnul's Enslave Soul, no longer uses random resistance checks.
* Mutation attacks disregard magic resistance again.
* Zin gets a power to once per game cure a follower of all mutations.
* Artificers start with 1 MP.
* Prompt before allowing TSO/Lugonu to bless your weapon.
* Vampiric Draining/Drain Life deal damage to summons again, but don't heal.
* Wielding stones for Sandblast now guarantees a range of 2.
* Change Portal Projectile range to full LOS.
* Limit the number of items a monster may pick up to two per turn.
* Unknown mimics are no longer stabbable.
* Turn autopickup back on if you gain see invisible, even temporarily.
* Polymorph other always polymorphs shapeshifters whose form isn't magic immune.
* Troll hide and armour count as light armour.