@@ -1002,7 +1002,11 @@ static std::string _describe_weapon(const item_def &item, bool verbose)
                 description += ", and it is better for the dexterous";
             description += ".";
         }
-
+        if (player_size(PSIZE_BODY) < SIZE_MEDIUM
+            && !check_weapon_wieldable_size(item, player_size(PSIZE_BODY)))
+        {
+            description += "$It is too large for you to wield.";
+        }
     }
 
     if (verbose)
