@@ -2306,8 +2306,10 @@ static builder_rc_type _builder_by_type(int level_number, char level_type)
 
             ASSERT(vault);
             if (!vault)
+            {
                 end(1, false, "Failed to find Pandemonium level %s!\n",
                     pandemon_level_names[which_demon]);
+            }
 
             _ensure_vault_placed( _build_vaults(level_number, vault), true );
         }
