@@ -2464,6 +2464,13 @@ bool is_useless_item(const item_def &item, bool temp)
     switch (item.base_type)
     {
     case OBJ_WEAPONS:
+        if (player_size(PSIZE_BODY) < SIZE_MEDIUM
+            && !check_weapon_wieldable_size(item, player_size(PSIZE_BODY)))
+        {
+            // Weapon is too large to be wielded.
+            return (true);
+        }
+
         if (!item_type_known(item))
             return (false);
 
